# just-focus

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pypi.yml  release-please.yml  tests.yml
src/just_focus/: __init__.py  pupil.py
src/leb/just_focus/: __init__.py  focal_fields.py  inputs.py  pupil.py
src/leb/just_focus/scripts/: gaussian.py  halfmoon.py
