[project]
name = "just-focus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle Douglass", email = "kyle.douglass@epfl.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
]

[project.scripts]
just-focus = "just_focus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
