[project]
name = "just-focus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Kyle Douglass", email = "kyle.douglass@epfl.ch" }
]
requires-python = ">=3.13"

dependencies = [
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.5",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leb"]
